# Celestara

./: .gitignore  .gitmodules  CMakeLists.txt  run.sh
Assets/Items/: test.json  test2.json
Assets/Shaders/: Animation.frag  Animation.vert  Main.frag  Main.vert  Slot.frag  Text.frag  Text.vert  UI.frag
Code/: Game.cpp  Game.h  Input.cpp  Input.h  Main.cpp
Code/Graphics/: Animation.cpp  Animation.h  Spritesheet.cpp  Spritesheet.h
Code/Inventory/: Inventory.cpp  Inventory.h  Item.cpp  Item.h
Code/Math/: Math.h  Transform.cpp  Transform.h
Code/Physics/: Category.h  RayCast.cpp  RayCast.h
Code/Registry/: ItemRegistry.cpp  ItemRegistry.h  TileRegistry.cpp  TileRegistry.h
Code/Renderer/: Camera.cpp  Camera.h  Font.cpp  Font.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Vertex.h  Window.cpp  Window.h
Code/UI/: Element.cpp  Element.h  UIManager.cpp  UIManager.h
Code/UI/Elements/: InventoryUI.cpp  InventoryUI.h
Code/Util/: Direction.h  String.h
Code/World/: Grid.cpp  Grid.h  Player.cpp  Player.h  Tile.h  World.cpp  World.h  WorldObject.h
